force-app/main/default/objects/School_Year__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>External_Id__c</columns>
    <columns>Current_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>